Got the gradle task BuildAboutLibraries working